Working on section gallery

--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/aet_logo.jpg" alt="AET" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija PIS d.o.o. je distributer holandske kompanije 
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija TrustIT d.o.o. je distributer holandske kompanije 
                                     AET za izdavanje međunarodno priznatih digitalih sertifikata, 
                                     koja omogućava da se na PDF dokumenta doda međunarodni elektronski 
                                     potpis, jednako verodostojan kao i ručno potpisan papirni dokument. 
-                                    Saradnja firmi AET i PIS omogućava da visokobezbednosni proizvodi 
+                                    Saradnja firmi AET i TrustIT omogućava da visokobezbednosni proizvodi 
                                     AET-a budu dostupni i na domaćem tržištu.">
-                                    Kompanija PIS d.o.o. je distributer holandske kompanije 
+                                    Kompanija TrustIT d.o.o. je distributer holandske kompanije 
                                     AET za izdavanje međunarodno priznatih digitalih sertifikata, 
                                     koja omogućava da se na PDF dokumenta doda međunarodni elektronski 
                                     potpis, jednako verodostojan kao i ručno potpisan papirni dokument. 
@@ -235,11 +235,11 @@ and open the template in the editor.
                                     <img src="img/partners/partneri-Gemalto.jpg" alt="Gemalto" class="img-partners"/>
                                 </a>
                                 <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Gemalto je svetski lider i najveći proizvođač kartica u 
-                                    Smart Card industriji. PIS d.o.o. je sertifikovani developer, 
+                                    Smart Card industriji. TrustIT d.o.o. je sertifikovani developer, 
                                     integrator i distributer za Gemalto proizvode. Gemalto je 
                                     prodao preko 1.000.000.000 smart kartica u 2013. godini.">
                                     Gemalto je svetski lider i najveći proizvođač kartica u 
-                                    Smart Card industriji. PIS d.o.o. je sertifikovani developer, 
+                                    Smart Card industriji. TrustIT d.o.o. je sertifikovani developer, 
                                     integrator i distributer za Gemalto proizvode. Gemalto je 
                                     prodao preko 1.000.000.000 smart kartica u 2013. godini.
                                 </h6>
@@ -250,12 +250,12 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/EDC_logo-300x38.png" alt="Datacard" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija PIS d.o.o. je zvanični distributer i partner američke 
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija TrustIT d.o.o. je zvanični distributer i partner američke 
                                     korporacije Entrust Datacard, svetskog lidera u delatnosti izdavanja 
                                     i izrade identifikacionih kartica. U širokom asortimanu imamo 
                                     Datacard štampače kartica, softverska rešenja, kompletan repromaterijal, 
                                     usluge održavanja, servisa i štampanja kartica.">
-                                    Kompanija PIS d.o.o. je zvanični distributer i partner američke 
+                                    Kompanija TrustIT d.o.o. je zvanični distributer i partner američke 
                                     korporacije Entrust Datacard, svetskog lidera u delatnosti izdavanja 
                                     i izrade identifikacionih kartica. U širokom asortimanu imamo 
                                     Datacard štampače kartica, softverska rešenja, kompletan repromaterijal, 
@@ -268,11 +268,11 @@ and open the template in the editor.
                                 <a href="#">
                                     <img src="img/partners/partneri-Kodak.jpg" alt="Kodak" class="img-partners"/>
                                 </a>
-                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija PIS d.o.o. je jedini sertifikovani distributer za 
+                                <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija TrustIT d.o.o. je jedini sertifikovani distributer za 
                                     Kodak Document Imagining program na tržištima Srbije i Crne Gore. 
                                     Kodak je svetski lider za masovnu obradu podataka i dokumenata 
                                     sa preko 65% svetskog tržišnog udela.">
-                                    Kompanija PIS d.o.o. je jedini sertifikovani distributer za 
+                                    Kompanija TrustIT d.o.o. je jedini sertifikovani distributer za 
                                     Kodak Document Imagining program na tržištima Srbije i Crne Gore. 
                                     Kodak je svetski lider za masovnu obradu podataka i dokumenata 
                                     sa preko 65% svetskog tržišnog udela.
@@ -286,11 +286,11 @@ and open the template in the editor.
                                 </a>
                                 <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="BookSnap i BookDrive su skeneri knjiga do A2 formata firme ATIZ, 
                                     a za kratko vreme su postali svetski hit za digitalizaciju arhivske 
-                                    građe biblioteka, opština, javnih ustanova, itd. PIS d.o.o. je od 2007. 
+                                    građe biblioteka, opština, javnih ustanova, itd. TrustIT d.o.o. je od 2007. 
                                     godine zastupnik za firmu ATIZ.">
                                     BookSnap i BookDrive su skeneri knjiga do A2 formata firme ATIZ, 
                                     a za kratko vreme su postali svetski hit za digitalizaciju arhivske 
-                                    građe biblioteka, opština, javnih ustanova, itd. PIS d.o.o. je od 2007. 
+                                    građe biblioteka, opština, javnih ustanova, itd. TrustIT d.o.o. je od 2007. 
                                     godine zastupnik za firmu ATIZ.
                                 </h6>
                             </div>
@@ -301,9 +301,9 @@ and open the template in the editor.
                                     <img src="img/partners/Zebra_tech_logo15-300x102.png" alt="Zebra" class="img-partners"/>
                                 </a>
                                 <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Zebra je tržišni lider u bar-kod i card printer oblasti. 
-                                    Kompanija PIS d.o.o. je Gold partner za Zebra opremu i repromaterijal.">
+                                    Kompanija TrustIT d.o.o. je Gold partner za Zebra opremu i repromaterijal.">
                                     Zebra je tržišni lider u bar-kod i card printer oblasti. 
-                                    Kompanija PIS d.o.o. je Gold partner za Zebra opremu i repromaterijal.
+                                    Kompanija TrustIT d.o.o. je Gold partner za Zebra opremu i repromaterijal.
                                 </h6>
                             </div>
                         </li>
@@ -316,13 +316,13 @@ and open the template in the editor.
                                     Workflow rešenja. Open Text Capture je trižišni lider i de facto 
                                     standard za capture application software, OCR i ICR prepoznavanje 
                                     podataka (naloga, čekova, specifikacija čekova, faktura, itd.), 
-                                    povezanost uređaja i obradu skeniranih slika. PIS d.o.o. je distributer 
+                                    povezanost uređaja i obradu skeniranih slika. TrustIT d.o.o. je distributer 
                                     rešenja za OpenText i sertifikovani solution provajder za OpenText Capture.">
                                     OpenText je najveća svetska kompanija za Document Management i 
                                     Workflow rešenja. Open Text Capture je trižišni lider i de facto 
                                     standard za capture application software, OCR i ICR prepoznavanje 
                                     podataka (naloga, čekova, specifikacija čekova, faktura, itd.), 
-                                    povezanost uređaja i obradu skeniranih slika. PIS d.o.o. je distributer 
+                                    povezanost uređaja i obradu skeniranih slika. TrustIT d.o.o. je distributer 
                                     rešenja za OpenText i sertifikovani solution provajder za OpenText Capture.
                                 </h6>
                             </div>
@@ -333,11 +333,11 @@ and open the template in the editor.
                                     <img src="img/partners/arhiviraj.png" alt="Arhiviraj" class="img-partners"/>
                                 </a>
                                 <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="ARHIVIRAJ.COM™ je outsourcing centar kompanije 
-                                    Poslovni Informacioni Sistemi – PIS d.o.o, u 
+                                    TrustIT d.o.o, u 
                                     kojem se pružaju najsavremenije usluge skeniranja, 
                                     mikrofilmovanja i arhiviranja dokumentacije.">
                                     ARHIVIRAJ.COM™ je outsourcing centar kompanije 
-                                    Poslovni Informacioni Sistemi – PIS d.o.o, u 
+                                    TrustIT d.o.o, u 
                                     kojem se pružaju najsavremenije usluge skeniranja, 
                                     mikrofilmovanja i arhiviranja dokumentacije.
                                 </h6>
@@ -346,11 +346,87 @@ and open the template in the editor.
                     </ul><!--SLIDER END--> 
                 </div>
             </section><!--partners section end-->
+            <!-- gallery start -->
+            <section class="gallery-section text-center py-3 py-lg-5" id="gallery" style="background: #F6F9F9">
+                <div class="container">
+                    <h2 class="title pt-5 mb-4">Showcase your work like a pro.</h2>
+                    <p class="lead subtitle mb-5">Contact me if you like my work</p>
+                    <div class="row">
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/01.TrustIT-Centrala.jpg" alt="gallery01" />
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" href="img/gallery/01.TrustIT-Centrala.jpg" class="fa fa-search-plus mx-2"></a>
+                                        <a href="#" class="fa fa-link"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/05.-Arhivske-kutije-1024x678.jpg" alt="gallery02" />
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" href="img/gallery/05.-Arhivske-kutije-1024x678.jpg" class="fa fa-search-plus mx-2"></a>
+                                        <a href="#" class="fa fa-link"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/06.-TrustIT-Skening-centar-1024x768.jpg" alt="gallery03" />
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" href="img/gallery/06.-TrustIT-Skening-centar-1024x768.jpg" class="fa fa-search-plus mx-2"></a>
+                                        <a href="#" class="fa fa-link"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/07.-Studentske-kartice-1024x805.jpg" alt="gallery04" />
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" href="img/gallery/07.-Studentske-kartice-1024x805.jpg" class="fa fa-search-plus mx-2"></a>
+                                        <a href="#" class="fa fa-link"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/08.-ID-kartice-1024x680.jpg" alt="gallery05" />
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" href="img/gallery/08.-ID-kartice-1024x680.jpg" class="fa fa-search-plus mx-2"></a>
+                                        <a href="#" class="fa fa-link"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/09.-Kljuc-kartice-za-kotele-1024x576.jpg" alt="gallery06" />
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" href="img/gallery/09.-Kljuc-kartice-za-kotele-1024x576.jpg" class="fa fa-search-plus mx-2"></a>
+                                        <a href="#" class="fa fa-link"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- gallery end -->
             <!--contact start-->
             <section class="contact-section" id="contact" style="background-image: linear-gradient(to right, rgba(160,160,160,0.55), rgba(160,160,160,0.55)), url(img/contact/background1.jpg)">
                 <div class="container">
-                    <h3 class="text-center dash mb-4 text-uppercase text-white">kontaktirajte nas</h3>
-                    <p class="mb-5 text-center text-white">
+                    <h3 class="text-center dash mb-4 text-uppercase text-contact">kontaktirajte nas</h3>
+                    <p class="mb-5 text-center text-contact">
                         Ukoliko ste zainteresovani za neku od naših usluga, slobodno nas kontaktirajte i odgovorićemo vam u najkraćem mogućem roku. 
                     </p>
                     <div class="row">
@@ -381,13 +457,12 @@ and open the template in the editor.
                                 </div>
                             </form>  
                         </div>
-
                         <div class="col-12 col-lg-5">
                             <article>
-                                <p class="d-flex text-white"> <span class="fa fa-map-marker fa-2x mr-2"></span> TrustIT d.o.o. Simina 1, 11000 Beograd, Srbija
+                                <p class="d-flex text-contact"> <span class="fa fa-map-marker fa-2x mr-2"></span> TrustIT d.o.o. Simina 1, 11000 Beograd, Srbija
                                 </p>
-                                <p class="d-flex align-items-center text-white"><span class="fa fa-envelope-o fa-2x text-white mr-2"></span><a href="mailto:office@pis.rs" class="text-white">office@pis.rs</a></p>
-                                <p class="d-flex align-items-center text-white"><span class="fa fa-phone text-white fa-2x mr-2 text-white"></span>011 328 33 10</p>
+                                <p class="d-flex align-items-center text-contact"><span class="fa fa-envelope-o fa-2x text-contact mr-2"></span><a href="mailto:office@pis.rs" class="text-contact">office@pis.rs</a></p>
+                                <p class="d-flex align-items-center text-contact"><span class="fa fa-phone text-white fa-2x mr-2 text-contact"></span>011 328 33 10</p>
                             </article>
                         </div>
                     </div>
