Finished section gallery and logo changed

--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@ and open the template in the editor.
 
         <!--theme css-->
         <link href="css/theme.css" rel="stylesheet" type="text/css"/>
-
     </head>
-    <body data-spy="scroll" data-target="#main-menu">
+    <body data-spy="scroll" data-target=".navbar">
         <!--header start-->
         <header class="py-2 py-lg-4 fixed-top">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-md navbar-light px-0">
                     <!--logo start-->
                     <a class="navbar-brand" href="http://localhost:8383/TrustIT/index.html">
-                        <!--<img src="img/logo.png" alt=""/>-->
-                        <h1 class="text-white">TrustIT</h1>
+                        <img src="img/logo/Logo negativ.png" alt="Logo"/>
+                        <!--<h1 class="text-white">TrustIT</h1>-->
                     </a><!--logo end-->
                     <!--Hamburger button-->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -347,18 +346,16 @@ and open the template in the editor.
                 </div>
             </section><!--partners section end-->
             <!-- gallery start -->
-            <section class="gallery-section text-center py-3 py-lg-5" id="gallery" style="background: #F6F9F9">
+            <section class="gallery-section text-center py-3 py-lg-5" id="gallery">
                 <div class="container">
-                    <h2 class="title pt-5 mb-4">Showcase your work like a pro.</h2>
-                    <p class="lead subtitle mb-5">Contact me if you like my work</p>
+                    <h2 class="title pt-5 mb-4 lineAfter line-center">Galerija</h2>
                     <div class="row">
                         <div class="col-12 col-sm-6 col-lg-4">
                             <article class="gallery-item">
                                 <figure>
-                                    <img src="img/gallery/01.TrustIT-Centrala.jpg" alt="gallery01" />
+                                    <img src="img/gallery/01trustit-centrala-1024x576.jpg" alt="gallery01" class="img-holder size-16by9"/>
                                     <div class="hover d-flex justify-content-center align-items-center">
-                                        <a data-fancybox="gallery" href="img/gallery/01.TrustIT-Centrala.jpg" class="fa fa-search-plus mx-2"></a>
-                                        <a href="#" class="fa fa-link"></a>
+                                        <a data-fancybox="gallery" data-caption="TrustIT Centrala" href="img/gallery/01.TrustIT-Centrala.jpg" class="fa fa-link mx-2"></a>
                                     </div>
                                 </figure>
                             </article>
@@ -366,10 +363,9 @@ and open the template in the editor.
                         <div class="col-12 col-sm-6 col-lg-4">
                             <article class="gallery-item">
                                 <figure>
-                                    <img src="img/gallery/05.-Arhivske-kutije-1024x678.jpg" alt="gallery02" />
+                                    <img src="img/gallery/05-arhivske-kutije-1024x576.jpg" alt="gallery02" class="img-holder size-16by9"/>
                                     <div class="hover d-flex justify-content-center align-items-center">
-                                        <a data-fancybox="gallery" href="img/gallery/05.-Arhivske-kutije-1024x678.jpg" class="fa fa-search-plus mx-2"></a>
-                                        <a href="#" class="fa fa-link"></a>
+                                        <a data-fancybox="gallery" data-caption="Arhivske kutije" href="img/gallery/05.-Arhivske-kutije-1024x678.jpg" class="fa fa-link mx-2"></a>
                                     </div>
                                 </figure>
                             </article>
@@ -377,10 +373,9 @@ and open the template in the editor.
                         <div class="col-12 col-sm-6 col-lg-4">
                             <article class="gallery-item">
                                 <figure>
-                                    <img src="img/gallery/06.-TrustIT-Skening-centar-1024x768.jpg" alt="gallery03" />
+                                    <img src="img/gallery/06-trustit-skening-centar-1024x576.jpg" alt="gallery03" class="img-holder size-16by9"/>
                                     <div class="hover d-flex justify-content-center align-items-center">
-                                        <a data-fancybox="gallery" href="img/gallery/06.-TrustIT-Skening-centar-1024x768.jpg" class="fa fa-search-plus mx-2"></a>
-                                        <a href="#" class="fa fa-link"></a>
+                                        <a data-fancybox="gallery" data-caption="TrustIT Skening centar" href="img/gallery/06.-TrustIT-Skening-centar-1024x768.jpg" class="fa fa-link mx-2"></a>
                                     </div>
                                 </figure>
                             </article>
@@ -388,10 +383,9 @@ and open the template in the editor.
                         <div class="col-12 col-sm-6 col-lg-4">
                             <article class="gallery-item">
                                 <figure>
-                                    <img src="img/gallery/07.-Studentske-kartice-1024x805.jpg" alt="gallery04" />
+                                    <img src="img/gallery/07-studentske-kartice-1024x576.jpg" alt="gallery04" class="img-holder size-16by9"/>
                                     <div class="hover d-flex justify-content-center align-items-center">
-                                        <a data-fancybox="gallery" href="img/gallery/07.-Studentske-kartice-1024x805.jpg" class="fa fa-search-plus mx-2"></a>
-                                        <a href="#" class="fa fa-link"></a>
+                                        <a data-fancybox="gallery" data-caption="Studentske kartice" href="img/gallery/07.-Studentske-kartice-1024x805.jpg" class="fa fa-link mx-2"></a>
                                     </div>
                                 </figure>
                             </article>
@@ -399,10 +393,9 @@ and open the template in the editor.
                         <div class="col-12 col-sm-6 col-lg-4">
                             <article class="gallery-item">
                                 <figure>
-                                    <img src="img/gallery/08.-ID-kartice-1024x680.jpg" alt="gallery05" />
+                                    <img src="img/gallery/08-id-kartice-1024x576.jpg" alt="gallery05" class="img-holder size-16by9"/>
                                     <div class="hover d-flex justify-content-center align-items-center">
-                                        <a data-fancybox="gallery" href="img/gallery/08.-ID-kartice-1024x680.jpg" class="fa fa-search-plus mx-2"></a>
-                                        <a href="#" class="fa fa-link"></a>
+                                        <a data-fancybox="gallery" data-caption="ID kartice" href="img/gallery/08.-ID-kartice-1024x680.jpg" class="fa fa-link mx-2"></a>
                                     </div>
                                 </figure>
                             </article>
@@ -410,10 +403,39 @@ and open the template in the editor.
                         <div class="col-12 col-sm-6 col-lg-4">
                             <article class="gallery-item">
                                 <figure>
-                                    <img src="img/gallery/09.-Kljuc-kartice-za-kotele-1024x576.jpg" alt="gallery06" />
+                                    <img src="img/gallery/09.-Kljuc-kartice-za-kotele-1024x576.jpg" alt="gallery06" class="img-holder size-16by9"/>
                                     <div class="hover d-flex justify-content-center align-items-center">
-                                        <a data-fancybox="gallery" href="img/gallery/09.-Kljuc-kartice-za-kotele-1024x576.jpg" class="fa fa-search-plus mx-2"></a>
-                                        <a href="#" class="fa fa-link"></a>
+                                        <a data-fancybox="gallery" data-caption="Ključ kartice za hotele" href="img/gallery/09.-Kljuc-kartice-za-kotele-1024x576.jpg" class="fa fa-link mx-2"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/10-barkod-stampaci-1024x576.jpg" alt="gallery07" class="img-holder size-16by9"/>
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" data-caption="Barkod štampači" href="img/gallery/10.-Barkod-stampaci-1024x682.jpg" class="fa fa-link mx-2"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/11-mobilni-stampaci-i-barkod-skeneri-1024x576.jpg" alt="gallery08" class="img-holder size-16by9"/>
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" data-caption="Mobilni štampači i barkod skeneri" href="img/gallery/11.-Mobilni-stampaci-i-barkod-skeneri-1024x680.jpg" class="fa fa-link mx-2"></a>
+                                    </div>
+                                </figure>
+                            </article>
+                        </div>
+                        <div class="col-12 col-sm-6 col-lg-4">
+                            <article class="gallery-item">
+                                <figure>
+                                    <img src="img/gallery/12.-Tokeni-za-smart-kartice-1024x576.jpg" alt="gallery09" class="img-holder size-16by9"/>
+                                    <div class="hover d-flex justify-content-center align-items-center">
+                                        <a data-fancybox="gallery" data-caption="Tokeni za smart kartice" href="img/gallery/12.-Tokeni-za-smart-kartice-1024x576.jpg" class="fa fa-link mx-2"></a>
                                     </div>
                                 </figure>
                             </article>
@@ -461,7 +483,7 @@ and open the template in the editor.
                             <article>
                                 <p class="d-flex text-contact"> <span class="fa fa-map-marker fa-2x mr-2"></span> TrustIT d.o.o. Simina 1, 11000 Beograd, Srbija
                                 </p>
-                                <p class="d-flex align-items-center text-contact"><span class="fa fa-envelope-o fa-2x text-contact mr-2"></span><a href="mailto:office@pis.rs" class="text-contact">office@pis.rs</a></p>
+                                <p class="d-flex align-items-center text-contact"><span class="fa fa-envelope-o fa-2x text-contact mr-2"></span><a href="mailto:office@pis.rs" class="text-contact">office@trustit.rs</a></p>
                                 <p class="d-flex align-items-center text-contact"><span class="fa fa-phone text-white fa-2x mr-2 text-contact"></span>011 328 33 10</p>
                             </article>
                         </div>
@@ -473,9 +495,8 @@ and open the template in the editor.
         <footer class="container-fluid">
             <section class="footer-section position-relative">
                 <div class="row">
-                    <div class="col-md-12 footer-logo">
-                        <!--<img class="img-responsive margin-auto" src="/assets/img/logo-bottom.png" alt="Quantox Logo Bottom">-->
-                        <h1 class="text-white text-center">TrustIT</h1>
+                    <div class="col-md-12 text-center">
+                        <img src="img/logo/Logo negativ.png" alt="TrustIT Logo"/>
                     </div>
                     <div class="col-md-12 text-center footer-navigation my-3">
                         <ul>
@@ -516,7 +537,7 @@ and open the template in the editor.
                         </ul>
                     </div>
                     <div class="col-md-12 text-center mt-4 mb-2">
-                        <div class="text-white">Copyright 2019 © TrustIT</div>
+                        <div class="text-white">Copyright 2019 &copy; TrustIT</div>
                     </div>
                 </div>
                 <div class="cover">
