Fix some issues with partners pictures

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ and open the template in the editor.
                         <li data-category='#C41FC4'>
                             <div class="slider-item text-left bg-white">
                                 <a href="#">
-                                    <img src="img/partners/aet_logo.jpg" alt="AET" class="img-partners"/>
+                                    <img src="img/partners/aet_logo.jpg" alt="AET" class="img-partners img-partners-aet"/>
                                 </a>
                                 <h6 class="mb-0 lineBefore line-left" data-toggle="tooltip" data-placement="bottom" title="Kompanija TrustIT d.o.o. je distributer holandske kompanije 
                                     AET za izdavanje međunarodno priznatih digitalih sertifikata, 
@@ -348,7 +348,7 @@ and open the template in the editor.
             <!-- gallery start -->
             <section class="gallery-section text-center py-3 py-lg-5" id="gallery">
                 <div class="container">
-                    <h2 class="title pt-5 mb-4 lineAfter line-center">Galerija</h2>
+                    <h2 class="title pt-5 mb-4 lineAfter line-center text-uppercase">galerija</h2>
                     <div class="row">
                         <div class="col-12 col-sm-6 col-lg-4">
                             <article class="gallery-item">
