--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ and open the template in the editor.
 <html lang="en">
     <head>
         <title>TrustIT</title>
+        <link rel="icon" type="image/png" href="/img/favicon/favicon.ico">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Marko Grujic - PIS">
@@ -16,12 +17,12 @@ and open the template in the editor.
         <!--iOS compatibile-->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-title" content="TrustIT">
-        <link rel="apple-touch-icon" href="putanja do ikonice favicon li neke">        
+        <link rel="apple-touch-icon" href="img/logo/apple-icon-60x60.png">        
 
         <!--Android compatibile-->
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="aplication-name" content="TrustIT">
-        <link rel="icon" type="icon/png" href="putanja do ikonice favicon li neke">
+        <link rel="icon" type="icon/png" href="img/logo/android-icon-48x48.png">
 
         <!--FONTOVI-->
         <!--Awesome-->
@@ -140,7 +141,7 @@ and open the template in the editor.
                     </div>
                     <ul class="list-unstyled pb-4">
                         <li>
-                            <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-center animation" data-animation="slideUp" data-delay="0.4s">
                                 <span class="w-20 fa fa-id-card-o text-center">
                                 </span>
                                 <p class="w-80">
@@ -152,7 +153,7 @@ and open the template in the editor.
                             </div>
                         </li>
                         <li>
-                            <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-center animation" data-animation="slideUp" data-delay="0.7s">
                                 <span class="w-20 fa fa-desktop text-center">
                                 </span>
                                 <p class="w-80">
@@ -165,7 +166,7 @@ and open the template in the editor.
                             </div>
                         </li>
                         <li>
-                            <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-center animation" data-animation="slideUp" data-delay="1.1s">
                                 <span class="w-20 fa fa-laptop text-center">
                                 </span>
                                 <p class="w-80">
@@ -179,7 +180,7 @@ and open the template in the editor.
                             </div>
                         </li>
                         <li>
-                            <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-center animation" data-animation="slideUp" data-delay="1.5s">
                                 <span class="w-20 fa fa-id-card-o text-center">
                                 </span>
                                 <p class="w-80">
@@ -198,6 +199,33 @@ and open the template in the editor.
                     </div>
                 </div>
             </section><!--section about-us end-->
+            <!--get started-->
+            <section class="get-started" style="background-image:linear-gradient(to right, rgba(21,164,250,0.35), rgba(21,164,250,0.35)), url(img/slide-web-softver.jpg)">
+                <div class="container">
+                    <div class="get-started-wrap text-center">
+                        <h2 class="text-white pb-4">
+                            TO GET STARTED
+                        </h2>
+                        <div class="get-started-paragraph pb-4">
+                            <p class="text-white">
+                                Tell us your thoughts, ideas and visions and let 
+                                TrustIT analyze and determine your needs to then 
+                                present you with options to take the next steps 
+                                to turn your concept into reality!
+                            </p>
+                            <p class="text-white">
+                                Regardless of how big or small your project is, 
+                                TrustIT has the resources to provide you with 
+                                the best possible solution with the most qualified 
+                                staff at an unbelievable price!
+                            </p>
+                        </div>
+                        <div class="get-started-button text-center">
+                            <a href="#contact" class="">start now</a>
+                        </div>
+                    </div>
+                </div>    
+            </section><!--get started end-->
             <!--partners section start-->
             <section class="partners-section" id="partners">
                 <div class="container">
@@ -345,6 +373,10 @@ and open the template in the editor.
                     </ul><!--SLIDER END--> 
                 </div>
             </section><!--partners section end-->
+            <!--brochure start-->
+            <section class="brochure">
+                
+            </section><!--brochure end-->
             <!-- gallery start -->
             <section class="gallery-section text-center py-3 py-lg-5" id="gallery">
                 <div class="container">
@@ -587,9 +619,10 @@ and open the template in the editor.
 
         <!--All page js-->
         <script src="js/main.js" type="text/javascript"></script>
-        
+
         <!--Button to TOP-->
-        <a href="#" id="scroll" style="display: none;"><span></span></a>
+        <a href="#" id="scroll" style="display: none;"><span></span></a> 
+
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c8fa0264c6e6fe3"></script>
     </body>
